--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="cn.a1949science.www.bookrecord.LoginActivity">
+    tools:context="cn.a1949science.www.bookrecord.activity.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/loginText"
