--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookrecord.activity.MainActivity">
+    tools:context="cn.a1949science.www.bookrecord.activity.StartActivity">
 
 </android.support.constraint.ConstraintLayout>
