--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,8 @@
                 android:background="@mipmap/verticalline"/>
             <EditText
                 android:id="@+id/phoneNumber"
+                android:maxLength="11"
+                android:selectAllOnFocus="true"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
