--- a/app/src/main/res/layout/book_info_list.xml
+++ b/app/src/main/res/layout/book_info_list.xml
@@ -5,29 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp">
-<cn.a1949science.www.bookrecord.widget.CircleImageView
-    android:id="@+id/book_info_headicon"
-    android:layout_marginStart="10dp"
-    android:layout_centerVertical="true"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
-    app:civ_border_width="2dp"
-    app:civ_border_color="#ccc"
-    />
-    <TextView
-        android:id="@+id/book_info_usernick"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
-        android:layout_centerVertical="true"
-        android:textSize="15dp"
-        android:layout_toRightOf="@+id/book_info_headicon"
-        android:layout_marginLeft="10dp"
-        />
+
+        <cn.a1949science.www.bookrecord.widget.CircleImageView
+            android:id="@+id/book_info_headicon"
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#ccc" />
+
+        <TextView
+            android:id="@+id/book_info_usernick"
+            android:layout_width="60dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:textSize="15sp"
+            android:layout_toEndOf="@+id/book_info_headicon"
+            android:layout_marginStart="10dp" />
 
         <RatingBar
             android:id="@+id/book_info_userrating"
