--- a/app/src/main/res/layout/seen_item.xml
+++ b/app/src/main/res/layout/seen_item.xml
@@ -22,12 +22,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/book_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="clip_horizontal"
-                android:textSize="16sp"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/book_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="clip_horizontal"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/public_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="clip_horizontal"
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RatingBar
+                    android:id="@+id/rating_star"
+                    style="@style/miniRatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="5" />
+
+                <TextView
+                    android:id="@+id/rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="clip_horizontal"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+
+
             <TextView
                 android:id="@+id/author_name"
                 android:layout_width="wrap_content"
@@ -40,12 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="clip_horizontal"
                 android:textSize="16sp"/>
-            <TextView
-                android:id="@+id/rating_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="clip_horizontal"
-                android:textSize="16sp"/>
+
         </LinearLayout>
 
 
