--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,4 +7,10 @@
         android:title="@string/search"
         android:icon="@mipmap/search"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_scan"
+        android:orderInCategory="100"
+        android:title="@string/scan"
+        android:icon="@mipmap/scan"
+        app:showAsAction="ifRoom" />
 </menu>
