--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eee"
+    android:background="#ddd"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context="cn.a1949science.www.bookrecord.activity.ReadingActivity">
@@ -36,13 +36,14 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="vertical"
+        android:background="#fff"
         android:gravity="center_horizontal"
         >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:text="评分"
         android:gravity="center_horizontal"
         android:textColor="@android:color/black"/>
@@ -56,6 +57,6 @@
             android:isIndicator="true"
             android:numStars="5"
             android:rating="3" />
-        
+
     </LinearLayout>
 </LinearLayout>
