想读，在读，读完界面设计完成(含bug)

--- a/app/src/main/res/layout/activity_seen.xml
+++ b/app/src/main/res/layout/activity_seen.xml
@@ -1,9 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ddd"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context="cn.a1949science.www.bookrecord.activity.SeenActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white">
+        <Button
+            android:id="@+id/seen_return"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@mipmap/returnbutton"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/verticalline" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="已读记录"
+            android:textSize="20dp"
+            android:textColor="@android:color/black"/>
+    </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="vertical"
+        android:background="#fff"
+        android:gravity="center_horizontal"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textSize="20dp"
+            android:text="评分"
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/black"/>
+        <RatingBar
+            android:id="@+id/seen_bookRating"
+            style="@style/foodRatingBar"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_height="35dp"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:rating="3" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:text="书评："
+                android:textSize="16dp"
+                android:textColor="@android:color/background_dark"
+                android:gravity="right|center_vertical"
+                />
+            <com.sendtion.xrichtext.RichTextEditor
+                android:id="@+id/seen_comment"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:textSize="16dp"
+                android:textColor="@android:color/darker_gray"
+                android:background="@drawable/bg_border"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            >
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:text="时间："
+                android:textSize="16dp"
+                android:textColor="@android:color/background_dark"
+                android:gravity="right|center_vertical"
+                />
+            <Spinner
+                android:id="@+id/seen_date"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp"
+                >
+            </Spinner>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:text="方式："
+                android:textSize="16dp"
+                android:textColor="@android:color/background_dark"
+                android:gravity="right|center_vertical"
+                />
+            <Spinner
+                android:id="@+id/seen_way"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp"
+                >
+            </Spinner>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:text="位置："
+                android:textSize="16dp"
+                android:textColor="@android:color/background_dark"
+                android:gravity="right|center_vertical"
+                />
+
+            <TextView
+                android:id="@+id/seen_adress_textview"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="选择读书地点"
+                />
+            <Button
+                android:id="@+id/seen_adress_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:background="@mipmap/adress"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:text="分类："
+                android:textSize="16dp"
+                android:textColor="@android:color/background_dark"
+                android:gravity="right|center_vertical"
+                />
+            <Spinner
+                android:id="@+id/seen_classfy"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp">
+            </Spinner>
+        </LinearLayout>
+        <Button
+            android:id="@+id/seen_Button"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="50dp"
+            android:background="#3ccf1b"
+            android:text="完成记录"
+            android:textSize="16dp"
+            android:textColor="#fff"/>
+    </LinearLayout>
+</LinearLayout>
