--- a/app/src/main/res/layout/seen_item.xml
+++ b/app/src/main/res/layout/seen_item.xml
@@ -32,14 +32,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="clip_horizontal"
-                    android:textSize="16sp"/>
+                    android:textColor="@color/black"
+                    android:textSize="25sp"/>
 
                 <TextView
                     android:id="@+id/public_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="clip_horizontal"
-                    android:textSize="16sp"/>
+                    android:textColor="@color/text_gray"
+                    android:textSize="15sp"/>
 
             </LinearLayout>
 
@@ -52,27 +54,23 @@
                     android:id="@+id/simpleRatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:srb_starWidth="15dp"
+                    app:srb_starHeight="15dp"
+                    app:srb_starPadding="5dp"
                     app:srb_numStars="5"
                     app:srb_stepSize="0.5"
                     app:srb_rating="5"
+                    app:srb_isIndicator="true"
                     app:srb_drawableEmpty="@mipmap/ministar_empty"
                     app:srb_drawableFilled="@mipmap/ministar_full">
                 </com.willy.ratingbar.ScaleRatingBar>
-
-                <RatingBar
-                    android:id="@+id/rating_star"
-                    style="@style/miniRatingBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:isIndicator="true"
-                    android:numStars="5"
-                    android:rating="5" />
 
                 <TextView
                     android:id="@+id/rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="clip_horizontal"
+                    android:textColor="@color/text_gray"
                     android:textSize="16sp"/>
             </LinearLayout>
 
@@ -82,16 +80,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="clip_horizontal"
-                android:textSize="16sp"/>
+                android:textColor="@color/text_gray"
+                android:textSize="20sp"/>
+
             <TextView
                 android:id="@+id/public_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="clip_horizontal"
-                android:textSize="16sp"/>
+                android:textColor="@color/text_gray"
+                android:textSize="20sp"/>
 
         </LinearLayout>
-
 
 
     </LinearLayout>
