--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#000</color>
     <color name="bookName">#000</color>
+    <color name="text_gray">#A1A1A1</color>
+    <color name="black">#000000</color>
+    <color name="orange">#ff6702</color>
 </resources>
